Fix social icons to center on mobiles

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -34,10 +34,10 @@ body > nav {
 }
 
 #social {
-  padding-left: 1.8em;
-  word-spacing: 0.6em;
+  text-align: center;
   a {
     text-decoration: none;
     font-size: 0.8em;
+    margin-left: 0.5em;
   }
 }
